--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 .panda-bg-info{
     background-color: #fceae8;
 }
+.price-color{
+    color: #FF136F;
+}
 .btn-buy-now{
     background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
     color: #fff;
@@ -17,6 +20,6 @@
     border-radius: 10px;
 }
 .cat3{
-    background-color: #0000ff;
+    background-color: #0000fe;
     border-radius: 10px;
 }
